--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 asgiref==3.6.0
 backports.zoneinfo==0.2.1
+cloudinary==1.32.0
 dj-database-url==0.5.0
 Django==4.1.7
+django-cloudinary-storage==0.3.0
+gunicorn==20.1.0
 Pillow==9.4.0
 psycopg2==2.9.5
 sqlparse==0.4.3
